exports[`test the round back button matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="eqjPHj">
  ButtonValue
</button>
`;

exports[`test the round back button with button type given matches the snapshot 1`] = `
<button
  aria-label="Back"
  className="eqjPHj"
  type="button">
  ButtonValue
</button>
`;
